@@ -12,4 +12,4 @@ max-line-length = 120
 # set the error format
 #format =
 # McCabe complexity threshold
-max-complexity = 10
+max-complexity = 15
