@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# pylint: disable=import-error,wrong-import-order,ungrouped-imports
-
 from __future__ import print_function
 
 import sys
@@ -27,7 +25,7 @@ try:
 except ImportError:
     from ez_setup import use_setuptools
     use_setuptools()
-    from setuptools import setup
+    from setuptools import setup  # pylint: disable=ungrouped-imports
 
 from distutils.core import Extension
 from distutils.command.build_ext import build_ext
@@ -37,14 +35,10 @@ from distutils.errors import DistutilsPlatformError, DistutilsExecError
 from ubjson import __version__ as version
 
 
-# For converting markdown README.md
-try:
-    from pypandoc import convert
-except ImportError:
-    READ_MD = lambda f: open(f, 'r').read()  # noqa: E731
-    print('Warning: pypandoc module not found, will not convert Markdown to RST')
-else:
-    READ_MD = lambda f: convert(f, 'rst')  # noqa: E731
+def load_description(filename):
+    script_dir = os.path.abspath(os.path.dirname(__file__))
+    with open(os.path.join(script_dir, filename), 'r', encoding='utf-8') as infile:
+        return infile.read()
 
 
 # Loosely based on https://github.com/mongodb/mongo-python-driver/blob/master/setup.py
@@ -80,7 +74,8 @@ setup(
     name='py-ubjson',
     version=version,
     description='Universal Binary JSON encoder/decoder',
-    long_description=READ_MD('README.md'),
+    long_description=load_description('README.md'),
+    long_description_content_type='text/markdown',
     author='Iotic Labs Ltd',
     author_email='info@iotic-labs.com',
     maintainer='Iotic Labs Ltd',
@@ -88,6 +83,12 @@ setup(
     url='https://github.com/Iotic-Labs/py-ubjson',
     license='Apache License 2.0',
     packages=['ubjson'],
+    extras_require={
+        'dev': [
+            'Pympler>=0.7 ,<0.8',
+            'coverage>=4.5.3,<4.6'
+        ]
+    },
     zip_safe=False,
     ext_modules=([Extension('_ubjson', sorted(glob('src/*.c')), extra_compile_args=COMPILE_ARGS)]
                  if BUILD_EXTENSIONS else []),
